@@ -81,9 +81,6 @@ GtkSourceBuffer 	*gtk_source_buffer_new_with_language 	(GtkSourceLanguage      *
 gboolean		 gtk_source_buffer_get_check_brackets   (GtkSourceBuffer        *buffer);
 void			 gtk_source_buffer_set_check_brackets	(GtkSourceBuffer        *buffer,
 							       	 gboolean                check_brackets);
-void                     gtk_source_buffer_set_bracket_match_style
-                                                                (GtkSourceBuffer         *source_buffer,
-								 const GtkSourceStyle    *style);
 
 gboolean		 gtk_source_buffer_get_highlight	(GtkSourceBuffer        *buffer);
 void			 gtk_source_buffer_set_highlight	(GtkSourceBuffer        *buffer,
